<resources>
    <string name="app_name">RecAppease</string>

    <string name="facebook_app_id">164118060907500</string>
    <string name="fb_login_protocol_scheme">fb164118060907500</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="Today">Today</string>
    <string name="Grocery">Grocery</string>
    <string name="Inventory">Inventory</string>
    <string name="MealPlan">Meal Plan</string>
    <string name="Recipes">Recipes</string>

    <string name="Browse">Browse</string>
    <string name="Favorites">Favorites</string>

    <string-array name="units">
        <item>-none-</item>
        <item>tsp</item>
        <item>tbs</item>
        <item>fl oz</item>
        <item>cups</item>
        <item>liters</item>
        <item>gallons</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
